--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,20 @@
     <string name="weather_string">Today-Sunny-83/63</string>
     <string name="action_refresh">Refresh</string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="detail_text">Detailed Weather Text</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings related to Settings -->
+    <!--Location Settings-->
+    <string name="pref_location_label">Location</string>
+    <string name="pref_location_key" translatable="false">location</string>
+    <string name="pref_location_default" translatable="false">45430</string>
+    <!--Unit Settings-->
+    <string name="pref_units_label">Unit of Measurement</string>
+    <string name="pref_units_key">unit</string>
+    <string name="pref_units_default">metric</string>
+
+
+    <!-- Example General settings -->
+
 </resources>
